Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-105251

[QML] PropertyChanges can't resolve property types

XMLWordPrintable

    • 236439de7 (dev), b8c6c3ea0 (dev), 6b049e58f (6.5), 9f5ee8655 (6.5)

      Using Property bindings this way

      import QtQuick
      
      Window {
          width: 640
          height: 480
          visible: true
          title: 'Resolve my color type'
      
          Item {
              id: foo
      
              states: [
                  State {
                      PropertyChanges {
                          target: foo
                          myColor: Qt.rgba(0.5, 0.5, 0.5, 0.16)
                      }
                  }        
               ]
      
              property color myColor: 'black'
          }
      }
      

      makes the linter say:

      Error: main.qml:16:21: Could not compile binding for myColor: Cannot resolve property type  for binding on myColor
      import QtQuick
      ^

        For Gerrit Dashboard: QTBUG-105251
        # Subject Branch Project Status CR V

            ulherman Ulf Hermann
            cajus Cajus Pollmeier
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes